[package]
name = "brunnylol"
version = "0.2.0"
authors = ["Jacob Rodal <jrodal98@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web framework - Axum
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }

# Templates - Askama
askama = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.16"

# CLI
clap = "4.0.32"

# URL encoding
urlencoding = "2.1"

# Error handling
anyhow = "1.0"

[dev-dependencies]
# Axum testing
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

