[package]
name = "brunnylol"
version = "0.2.0"
authors = ["Jacob Rodal <jrodal98@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web framework - Axum
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "limit"] }

# Templates - Askama
askama = "0.15.1"
askama_axum = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.16"

# CLI
clap = "4.5.54"

# URL encoding
urlencoding = "2.1"
url = "2.5"

# Error handling
anyhow = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }

# Authentication & Sessions
bcrypt = "0.16"
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
axum-extra = { version = "0.12", features = ["cookie"] }
async-trait = "0.1"
time = "0.3"

# JSON for bookmark config storage
serde_json = "1.0"

# HTTP client for URL imports
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies"] }

[dev-dependencies]
# Axum testing
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

